sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:13: error: not found: value n
       for (i<- n to 0 by -1 )
                ^